<resources>
    <string name="app_name">Hotelin</string>
    <string name="desc">Eahtin Ashta Resort adalah akomodasi
    modern yang terletak 6 menit berjalan kaki dari Pantai Echo.</string>

    <string name="error_email_valid">Masukkan Email yang Valid!</string>
    <string name="error_email_empty">Masukkan Email Anda!</string>
    <string name="error_password_empty">Masukkan Password Anda!</string>
    <string name="error_password_regex">Password Harus Berisi Minimal 6 Karakter</string>
    <string name="error_name_empty">Masukkan Nama Lengkap Anda!</string>
    <string name="error_username_empty">Masukkan Username Anda!</string>
    <string name="field_empty">Kolom ini Tidak Boleh Kosong!</string>
    <string name="confirmation_password_not_match">Kolom Password dan Konfirmasi Password Harus Sama!</string>
    <string name="error_database">Ada yang Salah</string>
    <string name="error_emailOrPassword">Email atau Password Salah!</string>
    <string name="error_null_response">Null Response</string>
    <string name="error_wrong_date_input">Tanggal Input Salah</string>
    <string name="error_empty_date_input">Masukkan Tanggal Check In dan Check Out</string>
    <string name="error_password_format">Format Password Baru Salah</string>

    <string name="home_toolbar_title">Hotelin</string>
    <string name="search_result_toolbar_title">Hasil Pencarian</string>
    <string name="booking_title">Data Pemesanan</string>
    <string name="preview_booking_title">Detail Pemesanan</string>
    <string name="booking_history_title">Riwayat Pemesanan</string>
    <string name="booking_detail_title">Detail Pemesanan</string>
    <string name="cancel_booking_title">Konfirmasi Pembatalan</string>
    <string name="profile_title">Informasi Akun</string>
    <string name="edit_profile_title">Perbarui Akun</string>
    <string name="change_password_title">Perbarui Password</string>
    <string name="hotel_detail_title">Detail Hotel</string>

    <string name="success_message">Success</string>
    <string name="login_success_message">Selamat Datang,</string>
    <string name="register_success_message">User Berhasil Didaftarkan</string>
    <string name="booking_success_message">Pemesanan Berhasil</string>
    <string name="cancel_booking_success_message">Pembatalan Berhasil</string>
    <string name="edit_profile_message">Data Berhasil Diperbarui</string>
    <string name="edit_profile_pic_message">Foto Berhasil Diperbarui</string>

    <string name="login_title">Selamat Datang,</string>
    <string name="register_title">Informasi Akun</string>
    <string name="register_sub_title">Informasi Pengguna</string>

    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="login_text">Masuk</string>
    <string name="register_text">Daftar</string>
    <string name="username_text">Username</string>
    <string name="gender_text">Jenis Kelamin : </string>
    <string name="genderM_text">Pria</string>
    <string name="genderF_text">Wanita</string>
    <string name="name_text">Nama Lengkap</string>
    <string name="telp_text">Nomor Telepon</string>
    <string name="address_text">Alamat</string>
    <string name="confirm_password_text">Konfirmasi Password</string>

    <string name="search_text">Cari</string>
    <string name="hotel_name_text">Nama Hotel</string>
    <string name="hotel_location_text">Lokasi Hotel</string>
    <string name="price_text">Harga</string>
    <string name="no_hotel_text">Tidak Ditemukan Hotel</string>

    <string name="check_in_text">Check In</string>
    <string name="check_out_text">Check Out</string>
    <string name="find_room_text">Tampilkan Kamar</string>
    <string name="no_room_text">Kamar Tidak Tersedia</string>

    <string name="room_title_text">Kode Kamar - Tipe Kamar</string>
    <string name="room_code_text">Kode Kamar</string>
    <string name="room_type_text">Tipe Kamar</string>
    <string name="bed_type_text">Tipe Kasur</string>
    <string name="bed_count_text">Jumlah Kasur</string>
    <string name="bed_text">Tipe Kasur (Jumlah Kasur)</string>
    <string name="guest_capacity_text">Kapasitas</string>
    <string name="select_room_text">Pilih Kamar</string>
    <string name="not_available_text">Tidak Tersedia</string>
    <string name="facility_text">Fasilitas</string>
    <string name="wifi_text">Free Wifi</string>
    <string name="breakfast_text">Sarapan Gratis</string>
    <string name="ac_text">Air Conditioner</string>
    <string name="tv_text">TV Kabel</string>

    <string name="next_text">Selanjutnya</string>
    <string name="booking_detail_text">Detail Pemesanan</string>
    <string name="days_count_text">Lama Menginap</string>
    <string name="total_price_text">Total Harga</string>
    <string name="book_room_text">Pesan Kamar</string>
    <string name="booking_time">12:00:00</string>
    <string name="ongoing_text">On Going</string>
    <string name="done_text">Done</string>
    <string name="canceled_text">Canceled</string>
    <string name="cancel_text">Cancel</string>

    <string name="cancel_booking_text">Batalkan Pemesanan</string>
    <string name="already_canceled__text">Dibatalkan</string>
    <string name="cancel_requirement_text_1">Refund sesuai dengan kesepakatan ketika proses pemesanan.</string>
    <string name="cancel_requirement_text_2">Refund hanya bisa dilakukan selama masa pemesanan.</string>

    <string name="edit_profile_text">Perbarui Profile Akun</string>
    <string name="change_password_text">Perbarui Password</string>
    <string name="logout_text">Keluar</string>
    <string name="save_text">Simpan</string>
    <string name="old_password_text">Password Lama</string>
    <string name="new_password_text">Password Baru</string>
    <string name="confirm_new_password_text">Konfirmasi Password Baru</string>
    <string name="hotel_desc_text">Tentang Hotel</string>
    <string name="starts_from_text">Mulai Dari</string>
    <string name="no_facility_text">Tidak Ada Fasilitas yang Terdaftar</string>
    <string name="version_text">Ver. 2.0</string>
</resources>