<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layout_marginHorizontal="15dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/booking_top_cv"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_hotel" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/hotel_name_text"
                    android:textColor="@color/hotelinPrimary"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="7dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/room_title_text" />


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/booking_check_layout"
        android:layout_below="@+id/booking_top_cv"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/booking_check_in_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_border2"
            android:drawableStart="@drawable/ic_in"
            android:drawablePadding="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center_vertical"
            android:ems="10"
            android:paddingStart="5dp"
            android:hint="@string/check_in_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/booking_check_out_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_border2"
            android:drawableStart="@drawable/ic_out"
            android:drawablePadding="5dp"
            android:paddingStart="5dp"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/check_out_text"
            android:textSize="16sp" />
    </LinearLayout>

    <ScrollView
        android:layout_below="@id/booking_check_layout"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/booking_name_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_form"
                android:paddingLeft="16dp"
                android:drawableStart="@drawable/ic_pemesan"
                android:drawablePadding="7dp"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:hint="@string/name_text"
                android:inputType="text"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/booking_telp_et"
                android:layout_below="@+id/booking_name_et"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_form"
                android:paddingLeft="16dp"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/telp_text"
                android:inputType="number"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/booking_email_et"
                android:layout_below="@id/booking_telp_et"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/bg_form"
                android:paddingLeft="16dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="7dp"
                android:ems="10"
                android:hint="@string/email_text"
                android:inputType="textEmailAddress"
                android:textSize="16sp" />

            <Button
                android:id="@+id/next_btn"
                android:layout_below="@id/booking_email_et"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_color"
                android:text="@string/next_text"
                android:textStyle="bold"
                android:textColor="#ffffff"
                android:textSize="22sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>