<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/preview_booking_room_pic"
        android:src="@drawable/no_pic"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="125dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/preview_booking_top_cv"
        android:layout_below="@id/preview_booking_room_pic"
        android:layout_marginTop="-45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/ic_hotel" />

            <LinearLayout
                android:layout_marginVertical="10dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/preview_booking_hotel_name_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_name_text"
                    android:textColor="@color/hotelinPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/preview_booking_room_type_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/room_title_text" />

                <TextView
                    android:id="@+id/preview_booking_room_price_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/price_text" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_below="@id/preview_booking_top_cv"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/preview_booking_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:fontFamily="@font/bold"
                android:text="@string/booking_detail_text"
                android:textSize="20sp" />

            <View
                android:id="@+id/preview_booking_view_1"
                android:layout_below="@id/preview_booking_title_tv"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/customPrimary"/>

            <LinearLayout
                android:id="@+id/preview_booking_detail_layout"
                android:layout_below="@id/preview_booking_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/preview_booking_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/preview_booking_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/telp_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/preview_booking_telp_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telp_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/preview_booking_check_in_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/check_out_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/preview_booking_check_out_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/days_count_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/preview_booking_days_count_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/days_count_text" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/preview_booking_view_2"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/preview_booking_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/customPrimary"/>

            <LinearLayout
                android:id="@+id/preview_booking_total_price_layout"
                android:layout_below="@+id/preview_booking_view_2"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/total_price_text"
                    android:textSize="14sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/customPrimary"
                    android:layout_gravity="end"
                    android:text="@string/price_text"
                    android:textStyle="bold"
                    android:textSize="28sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/preview_booking_book_btn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/preview_booking_total_price_layout"
                android:layout_gravity="center"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_btn"
                android:fontFamily="@font/bold"
                android:text="@string/book_room_text"
                android:textColor="#ffff"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>