<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/detail_booking_room_pic"
        android:src="@drawable/no_pic"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="125dp"/>

    <RelativeLayout
        android:id="@+id/detail_booking_top_layout"
        android:layout_below="@id/detail_booking_room_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">

        <LinearLayout
            android:layout_marginVertical="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_booking_hotel_name_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hotel_name_text"
                android:textColor="@color/hotelinPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detail_booking_room_type_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:text="@string/room_title_text" />

            <TextView
                android:id="@+id/detail_booking_room_price_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/price_text" />
        </LinearLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/detail_booking_top_layout"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/detail_booking_title_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/detail_booking_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/booking_detail_text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/detail_booking_cancel_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/bold"
                    android:textColor="@color/hotelinPrimary"
                    android:text="@string/cancel_text"
                    android:textSize="14sp" />
            </RelativeLayout>

            <View
                android:id="@+id/preview_booking_view_1"
                android:layout_below="@id/detail_booking_title_layout"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/customPrimary"/>

            <LinearLayout
                android:id="@+id/preview_booking_detail_layout"
                android:layout_below="@id/preview_booking_view_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:textStyle="bold"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/detail_booking_name_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/email_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_booking_email_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/email_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/telp_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_booking_telp_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/telp_text" />
                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_booking_check_in_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_in_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/check_out_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_booking_check_out_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/check_out_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/days_count_text"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/detail_booking_days_count_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/days_count_text" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/preview_booking_view_2"
                android:layout_marginVertical="5dp"
                android:layout_below="@id/preview_booking_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/customPrimary"/>

            <LinearLayout
                android:id="@+id/detail_booking_total_price_layout"
                android:layout_below="@+id/preview_booking_view_2"
                android:layout_marginVertical="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/price_text"
                    android:textSize="14sp"/>

                <TextView
                    android:id="@+id/detail_booking_total_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/customPrimary"
                    android:layout_gravity="end"
                    android:text="@string/price_text"
                    android:textStyle="bold"
                    android:textSize="28sp"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>